--- a/views/about.html
+++ b/views/about.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="/public/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <title>About</title>
 </head>
 <body>
     <header id="navigation">
-        <h1 class="col-sm-4">About the author</h1>
+        <h1 class="col-sm-4">About</h1>
           <nav class="navbar navbar-expand-lg navbar-light col-sm-8">
               <div class="container-fluid">
                 <a class="navbar-brand" href="#"></a>
@@ -20,16 +20,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="./home.html">Home</a>
+                      <a class="nav-link " aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="/views/about.html">Author</a>
+                      <a class="nav-link" href="/about">Author</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="/views/works.html">Games</a>
+                      <a class="nav-link" href="/works">Games</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="/views/gallery.html">Photo Gallery</a>
+                      <a class="nav-link" href="/gallery">Photo Gallery</a>
                     </li>
                       </ul>
                 </div>
@@ -38,7 +38,7 @@
           </header>
             <div class="author">
 
-                <img src="/public/images/miyazaki.png" alt="Hidetaka Miyazaki photo">
+                <img src="/images/miyazaki.png" alt="Hidetaka Miyazaki photo">
                 <div class="autor">Hidetaka Miyazaki</div>
                 <div class="bio">
                     Hidetaka Miyazaki is a Japanese video game director, designer, writer, and company president of FromSoftware. He originally joined the company in 2004 as a game designer for the Armored Core series, later becoming better known for creating the Souls series. Other notable games he has worked on include Bloodborne, Sekiro, and Elden Ring.
