--- a/views/gallery.html
+++ b/views/gallery.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="/public/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <title>Photo Gallery</title>
 </head>
 <body>
@@ -20,16 +20,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="./home.html">Home</a>
+                      <a class="nav-link " aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="/views/about.html">Author</a>
+                      <a class="nav-link" href="/about">Author</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="/views/works.html">Games</a>
+                      <a class="nav-link" href="/works">Games</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="/views/gallery.html">Photo Gallery</a>
+                      <a class="nav-link" href="/gallery">Photo Gallery</a>
                     </li>
                       </ul>
                 </div>
@@ -41,7 +41,7 @@
           <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/public/images/solairi.png" class="d-block w-100" alt="slider 1">
+                <img src="/images/solairi.png" class="d-block w-100" alt="slider 1">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Solaire de Astora</h5>
                   <p></p>
@@ -49,7 +49,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="/public/images/Anor_Londo_.jpg" class="d-block w-100" alt="slider 2">
+                <img src="/images/Anor_Londo_.jpg" class="d-block w-100" alt="slider 2">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Ciudad de Anor Londo</h5>
                   <p></p>
@@ -57,7 +57,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="/public/images/pelea.jpg" class="d-block w-100" alt="slider 3">
+                <img src="/images/pelea.jpg" class="d-block w-100" alt="slider 3">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Combate entre caballeros</h5>
                   <p></p>
