--- a/views/home.html
+++ b/views/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="/public/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <title>Home</title>
 </head>
 <body>
@@ -20,16 +20,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./home.html">Home</a>
+                        <a class="nav-link " aria-current="page" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="/views/about.html">Author</a>
+                        <a class="nav-link" href="/about">Author</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="/views/works.html">Games</a>
+                        <a class="nav-link" href="/works">Games</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="/views/gallery.html">Photo Gallery</a>
+                        <a class="nav-link" href="/gallery">Photo Gallery</a>
                         </li>
                     </ul>
                 </div>
@@ -37,7 +37,7 @@
             </nav>
     </header>
     <div class="portada">
-        <img src="/public/images/Dark_Souls_Portada.jpg" alt="gamePortada">
+        <img src="/images/Dark_Souls_Portada.jpg" alt="gamePortada">
         <div class="titulo">
             YOU DIED
         </div>
